--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
 /*end reset*/
 body{
 	padding: 30px;
-    background: #fab1a0;
+    background: #ff7675;
     background-size: cover;
    font-family: 'Raleway', sans-serif;
 }
